--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
     "idb": "^8.0.2",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
