--- a/server/package.json
+++ b/server/package.json
@@ -16,18 +16,16 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@babel/preset-typescript": "^7.26.0",
-    "@tsconfig/node20": "^20.1.4",
+    "@jest/globals": "^29.7.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
-    "@types/supertest": "^6.0.2",
+    "@types/node": "^22.13.13",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
     "jest": "^29.7.0",
     "nodemon": "^3.1.9",
     "prisma": "^6.5.0",
-    "supertest": "^7.1.0",
     "ts-jest": "^29.2.6",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
@@ -37,11 +35,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "gestion-des-operations-immobiliere": "file:..",
     "jest-mock-extended": "^4.0.0-beta1",
-    "playwright": "^1.51.1",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1",
-    "uuid": "^11.1.0"
+    "swagger-ui-express": "^5.0.1"
   }
 }
